4.0
	+ Set version to 4.0
	+ Added migration which get rid of deprecated l7 rules
3.5
	+ Fixed checking for other u32 rule in the same interface
	+ Set version to 3.4
	+ Fixed bug that made impossible to add rules
3.4
	+ Unallow edition of interface in rules until it is supported
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Mark bond slaves as not shapable and use the master bond for shaping
	  (contribution by Vsevolod Kukol)
	+ Set version to 3.4
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Show menu icon when zentyal-l7-protocols is not installed
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.3
	+ Added missing EBox::Gettext use
3.1.2
	+ Fixed recursive bug that tried to add two times the same
	  interface to InterfaceRates model
3.1.1
	+ Added support to priorize ACK, SYN, FIN and RST small packages.
3.1
	+ Depend on zentyal-core 3.1
3.0.1
	+ Fixed row synchronization with interface changes in Interfaces rates model
	+ Do not create builder or reset chains for non set or trunk interfaces
	+ Fixed bug in checking rules when they are re-enabled
2.3.6
	+ Use full path for notifier of notifyActions. More restrictive
	  notifyForeignModelAction(). Moved this method from parent to subclass
2.3.5
	+ Added modeldepends to yaml schema
2.3.4
	+ Use Clone::Fast instead of Clone
2.3.3
	+ Disabled rules for ppp and non set interfaces
	+ iptables range option used in commands upon object range members
	+ Added all interfaces option in rule select interface option
2.3.2
	+ Separate rules in internal (download) and external (upload)
	+ Use regular models instead of a dynamic select composite
	+ Adapted to new Model management framework
	+ Implement new EBox::NetworkObserver::regenGatewaysFailover()
	+ Fixed duplicate rows in interfaces rates page
2.3.1
	+ Use printableName instead of name to select services
2.3
	+ Replaced autotools with zbuildtools
2.1.4